<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:id="@+id/fees_per_month"
        android:background="@color/primary_light"
        android:defaultValue="500"
        android:dialogIcon="@drawable/ic_attach_money_black_24dp"
        android:dialogMessage="@string/enter_monthly_fees"
        android:hint="enter Fees Per month"
        android:icon="@drawable/ic_money"
        android:key="@string/fees_per_month"
        android:positiveButtonText="@string/set"
        android:summary="@string/set_monthly_fees"
        android:title="@string/set_fees" />
    <ListPreference
        android:entries="@array/modes_name"
        android:entryValues="@array/mode_values"
        android:icon="@drawable/ic_brightness_medium_black_24dp"
        android:key="modes"
        android:summary="@string/click_to_theme"
        android:title="@string/select_theme" />
    <ListPreference
        android:entries="@array/lang"
        android:entryValues="@array/langValues"
        android:icon="@drawable/ic_translate_black_24dp"
        android:key="lang"
        android:summary="@string/select_lang"
        android:title="@string/choose_lang" />
</PreferenceScreen>