<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sort_by">
        <menu>
            <group
                android:id="@+id/fees_grp"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/by_name"
                    android:title="@string/by_name" />
                <item
                    android:id="@+id/by_fees"
                    android:title="@string/by_fees" />
                <item
                    android:id="@+id/by_date_new"
                    android:title="@string/by_date_new" />
                <item
                    android:id="@+id/by_date_old"
                    android:title="@string/by_date_old" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
</menu>