<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:fragment="com.abhinav.chauhan.gymdatamanager.preferences.GeneralPreferences"
        android:icon="@drawable/ic_assignment_turned_in_black_24dp"
        android:title="@string/general" />
    <Preference
        android:fragment="com.abhinav.chauhan.gymdatamanager.preferences.SecurityPreferences"
        android:icon="@drawable/ic_security_black_24dp"
        android:title="@string/security" />
    <Preference
        android:fragment="com.abhinav.chauhan.gymdatamanager.fragments.AccountFragment"
        android:icon="@drawable/ic_vpn_key_black_24dp"
        android:title="@string/account" />
    <Preference
        android:icon="@drawable/ic_portrait_black_24dp"
        android:fragment="com.abhinav.chauhan.gymdatamanager.fragments.AboutFragment"
        android:title="@string/about" />

</PreferenceScreen>
