<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/click_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/circular_image_button"
        android:elevation="4dp"
        android:src="@drawable/baseline_photo_camera_24"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintWidth_percent="0.2" />


    <androidx.cardview.widget.CardView
        android:id="@+id/add_new_member_image_cardview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/primary_light"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/new_member_circularimageview"
            style="@style/CircularImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ScrollView
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/add_member"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/member_input_fields"
            app:endIconMode="clear_text"
                android:elevation="2dp"
                android:hint="@string/enter_member_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_name_textinput_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/member_input_fields"
            app:endIconMode="clear_text"
            android:layout_marginTop="5dp"
            android:elevation="2dp"
            android:hint="@string/enter_members_phone">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_phone_textinput_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/member_input_fields"
            app:endIconMode="clear_text"
            android:layout_marginTop="5dp"
            android:elevation="2dp"
            android:hint="@string/enter_members_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_address_textinput_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/member_input_fields"
                android:layout_marginTop="5dp"
                android:elevation="2dp"
                android:hint="@string/enter_member_name"
                app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_joiningdate_textinput_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        style="@style/buttons"
        android:id="@+id/add_from_contacts"
        android:text="@string/from_contacts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_member"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/buttons"
        android:id="@+id/add_member"
        android:text="@string/add_member"
        app:layout_constraintStart_toEndOf="@id/add_from_contacts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>