<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/member_info_motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    app:layoutDescription="@xml/member_records_motion_scene">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/member_name_textinputlayout"
            style="@style/member_input_fields"
            android:hint="@string/members_name"
            app:endIconMode="custom"
            android:tag="memberName"
            app:endIconDrawable="@drawable/ic_mode_edit_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_name_textinput_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="auto" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview_name">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/member_phone_textinputlayout"
            style="@style/member_input_fields"
            android:hint="@string/members_phone"
            app:endIconMode="custom"
            android:tag="memberName"
            app:endIconDrawable="@drawable/ic_mode_edit_black_24dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_phone_textinput_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview_phone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/member_address_textinputlayout"
            style="@style/member_input_fields"
            android:hint="@string/members_address"
            app:endIconMode="custom"
            android:tag="memberName"
            app:endIconDrawable="@drawable/ic_mode_edit_black_24dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_address_textinput_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_joiningdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/primary_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview_address">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/member_joiningdate_textinputlayout"
            style="@style/member_input_fields"
            android:hint="@string/members_joining_date"
            app:endIconMode="custom"
            android:tag="memberName"
            app:endIconDrawable="@drawable/ic_mode_edit_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_joiningdate_textinput_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/fee_records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorAccent"
        android:elevation="5dp"
        android:text="@string/fee_records"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview_joiningdate" />

    <include
        android:id="@+id/member_feerecords_recyclerview"
        layout="@layout/recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fee_records" />

</androidx.constraintlayout.motion.widget.MotionLayout>